fix form submit on mobile login, signup, and emailverification

--- a/src/containers/EmailVerificationForm/EmailVerificationForm.css
+++ b/src/containers/EmailVerificationForm/EmailVerificationForm.css
@@ -2,6 +2,12 @@
 
 .root {
   @apply --marketplaceModalFormRootStyles;
+
+  justify-content: flex-start;
+
+  @media (--viewportMedium) {
+    justify-content: space-between;
+  }
 }
 
 .bottomWrapper {
